--- a/TMVK/index.html
+++ b/TMVK/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Wilkommen DZ Bank</h1>
-<p>Testen Sie Genesys Chat Bot mit MS Dynamics.</p>
+<p>Testen Sie Genesys Chat Bot für TMVK.</p>
 </body>
 <script type="text/javascript" charset="utf-8">
  (function (g, e, n, es, ys) {
@@ -19,13 +19,5 @@
   });
 
 
-Genesys("command", "Database.set", {
-  messaging: {
-    customAttributes: {
-      Division: "TMVK"
-    }
-  }
-}
-);
 </script>
 </html>
