--- a/TMVK/index.html
+++ b/TMVK/index.html
@@ -17,6 +17,14 @@
     environment: 'prod-euc1',
     deploymentId: 'b87e673e-a0e2-487b-8349-b71cb786927d'
   });
+Genesys("command", "Database.set", {
+  messaging: {
+    customAttributes: {
+      Firstname: "Valery",
+      Lastname: "Chhoa"
+    }
+  }
+});
 
 
 </script>
