--- a/TMVK/index.html
+++ b/TMVK/index.html
@@ -22,8 +22,7 @@
  Genesys("command", "Database.set", {
   messaging: {
     customAttributes: {
-      Firstname: "Valery",
-      Lastname: "Chhoa"
+      Division: "TMVK"
     }
   }
 });
