--- a/IF/index.html
+++ b/IF/index.html
@@ -17,8 +17,8 @@
     environment: 'prod-euc1',
     deploymentId: 'b87e673e-a0e2-487b-8349-b71cb786927d'
   });
-
-
+</script>
+<script type="text/javascript" charset="utf-8">
 Genesys("command", "Database.set", {
   messaging: {
     customAttributes: {
