--- a/IT/index.html
+++ b/IT/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Wilkommen DZ Bank</h1>
-<p>Testen Sie Genesys Chat Bot mit MS Dynamics.</p>
+<p>Testen Sie Genesys Chat Bot für IT.</p>
 </body>
 <script type="text/javascript" charset="utf-8">
  (function (g, e, n, es, ys) {
@@ -18,7 +18,8 @@
     deploymentId: 'b87e673e-a0e2-487b-8349-b71cb786927d'
   });
 
-
+ <script type="text/javascript" charset="utf-8">
+</script>
 Genesys("command", "Database.set", {
   messaging: {
     customAttributes: {
