--- a/IF/index.html
+++ b/IF/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Wilkommen DZ Bank</h1>
-<p>Testen Sie Genesys Chat Bot mit MS Dynamics.</p>
+<p>Testen Sie Genesys Chat Botfür IF.</p>
 </body>
 <script type="text/javascript" charset="utf-8">
  (function (g, e, n, es, ys) {
