--- a/ITMA/index.html
+++ b/ITMA/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Wilkommen DZ Bank</h1>
-<p>Testen Sie Genesys Chat Bot mit MS Dynamics.</p>
+<p>Testen Sie Genesys Chat Bot für ITMA.</p>
 </body>
 <script type="text/javascript" charset="utf-8">
  (function (g, e, n, es, ys) {
@@ -18,8 +18,9 @@
     deploymentId: 'b87e673e-a0e2-487b-8349-b71cb786927d'
   });
 
-
-Genesys("command", "Database.set", {
+</script>
+<script type="text/javascript" charset="utf-8">
+ Genesys("command", "Database.set", {
   messaging: {
     customAttributes: {
       Division: "ITMA"
