--- a/ITSD/index.html
+++ b/ITSD/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Wilkommen DZ Bank</h1>
-<p>Testen Sie Genesys Chat Bot für ITSD.</p>
+<h1>Wilkommen bei der DZ Bank</h1>
+<p>Testen Sie den Genesys Chat Bot für ITSD.</p>
 </body>
 <script type="text/javascript" charset="utf-8">
  (function (g, e, n, es, ys) {
