--- a/ITSD/index.html
+++ b/ITSD/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Wilkommen bei der DZ Bank</h1>
-<p>Testen Sie den Genesys Chat Bot für ITSD.</p>
+<!-- 
+ <h1>Wilkommen bei der DZ Bank</h1>
+ <p>Testen Sie den Genesys Chat Bot für ITSD.</p>
+ -->
 </body>
 <script type="text/javascript" charset="utf-8">
  (function (g, e, n, es, ys) {
@@ -29,4 +31,11 @@ Genesys("command", "Database.set", {
 }
 );
 </script>
+<style>
+body {
+  background-image: url("./images/dz_startpage.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
 </html>
