--- a/ITSD/index.html
+++ b/ITSD/index.html
@@ -33,7 +33,7 @@ Genesys("command", "Database.set", {
 </script>
 <style>
 body {
-  background-image: url("/images/dz_startpage.png");
+  background-image: url("/images/dz_startpage_ITSD.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
