--- a/IT/index.html
+++ b/IT/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Wilkommen DZ Bank</h1>
-<p>Testen Sie Genesys Chat Bot für IT.</p>
+ <!-- 
+ <h1>Wilkommen bei der DZ Bank</h1>
+ <p>Testen Sie den Genesys Chat Bot für ITSD.</p>
+ -->
 </body>
+ <style>
+body {
+  background-image: url("/images/dz_startpage_ITSD.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
 <script type="text/javascript" charset="utf-8">
  (function (g, e, n, es, ys) {
     g['_genesysJs'] = e;
