--- a/IT/index.html
+++ b/IT/index.html
@@ -28,7 +28,7 @@ body {
   });
 
  <script type="text/javascript" charset="utf-8">
-</script>
+<script>
 Genesys("command", "Database.set", {
   messaging: {
     customAttributes: {
