--- a/IT/index.html
+++ b/IT/index.html
@@ -26,9 +26,8 @@ body {
     environment: 'prod-euc1',
     deploymentId: 'b87e673e-a0e2-487b-8349-b71cb786927d'
   });
-
+ </script>
  <script type="text/javascript" charset="utf-8">
-<script>
 Genesys("command", "Database.set", {
   messaging: {
     customAttributes: {
