--- a/IT/index.html
+++ b/IT/index.html
@@ -8,7 +8,7 @@
 </body>
  <style>
 body {
-  background-image: url("/images/dz_startpage_ITSD.png");
+  background-image: url("/images/dz_startpage_IT.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
