--- a/IT/index.html
+++ b/IT/index.html
@@ -3,7 +3,7 @@
 <body>
  <!-- 
  <h1>Wilkommen bei der DZ Bank</h1>
- <p>Testen Sie den Genesys Chat Bot für ITSD.</p>
+ <p>Testen Sie den Genesys Chat Bot für IT.</p>
  -->
 </body>
  <style>
