--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+<!--
 <body>
 <h1>Wilkommen DZ Bank</h1>
 <p>Testen Sie Genesys Chat Bot.</p>
+-->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </body>
 <script type="text/javascript" charset="utf-8">
   (function (g, e, n, es, ys) {
@@ -18,4 +23,62 @@
     deploymentId: 'b87e673e-a0e2-487b-8349-b71cb786927d'
   });
 </script>
+  <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-image: url("/images/dz_startpage_frontpage.png");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            height: 100vh;
+            color: rgb(232, 134, 34);
+            text-align: center;
+        }
+        .content {
+            padding-bottom: 15vh;
+        }
+        h1 {
+            margin: 0;
+            padding: 0;
+            font-size: 3vw; /* Adjust this as needed */
+        }
+        a {
+            color: rgb(39, 102, 177);
+            background-color: transparent;
+            text-decoration: none;
+            display: inline-block;
+            margin: 0 10px;
+            font-size: 2vw; /* Adjust this as needed */
+			font-weight:bold
+        }
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 6vw; /* Adjust this as needed for smaller screens */
+            }
+            a {
+                font-size: 4vw; /* Adjust this as needed for smaller screens */
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="content">
+        <h1>Abteilungen</h1>
+		<br>
+        <a href="https://annaguidagenesys.github.io/PKVK/">PKVK</a>
+        <a href="https://annaguidagenesys.github.io/TMFK/">TMFK</a>
+        <a href="https://annaguidagenesys.github.io/TMVK/">TMVK</a>
+        <a href="https://annaguidagenesys.github.io/IT/">IT</a>
+        <a href="https://annaguidagenesys.github.io/ITSD/">ITSD</a>
+        <a href="https://annaguidagenesys.github.io/PSAH/">PSAH</a>
+        <a href="https://annaguidagenesys.github.io/ITMA/">ITMA</a>
+        <a href="https://annaguidagenesys.github.io/SFBN/">SFBN</a>
+        <a href="https://annaguidagenesys.github.io/IF/">IF</a>
+        <a href="https://annaguidagenesys.github.io/IFWQ/">IFWQ</a>
+    </div>
+</body>
 </html>
