--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         a {
             color: rgb(39, 102, 177);
             background-color: transparent;
-            text-decoration: none;
+            text-decoration: underline;
             display: inline-block;
             margin: 0 10px;
             font-size: 2vw; /* Adjust this as needed */
-			font-weight:bold
+	    font-weight:bold;
         }
         @media (max-width: 768px) {
             h1 {
