--- a/RBIPOC/index.html
+++ b/RBIPOC/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="it" xml:lang="utf-8" xmlns="http://www.w3.org/1999/xhtml">
   <head>
   <meta http-equiv="Content-Type" content="plain/text; charset=utf-8"/>
