--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -106,7 +106,7 @@ const conversationsApi = new platformClient.ConversationsApi();
 const urlParams = new URLSearchParams(window.location.search);
 currentConversationId = urlParams.get('conversationid');
 
-const redirectUri =  'https://annaguidagenesys.github.io/UBSPOC/crmdemo.html/oauth/callback' ;
+const redirectUri =  'https://annaguidagenesys.github.io/UBSPOC/crmdemo.html' ;
 //const redirectUri = (new URL (window.location.href)).hostname == 'https://annaguidagenesys.github.io/UBSPOC/crmdemo.html/oauth/callback' 
 //?                config.testUri : config.prodUri;
 
