--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -131,7 +131,7 @@ client.loginImplicitGrant(
  //  return conversationsApi.getConversation(conversationId);
    
    
-   apiInstance.getConversation(conversationId)
+   conversationsApi.getConversation(conversationId)
   .then((data) => {
     console.log(`getConversation success! data: ${JSON.stringify(data, null, 2)}`);
   })
