--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -156,8 +156,8 @@ client.loginImplicitGrant(
 //Kameliya
 const ani = await getAniByConversationId(conversationId);
 console.log('ANI from participant attributes:', ani);
-//document.getElementById("telefono").value = conversationId;
-document.getElementById("telefono").value = ani;
+document.getElementById("telefono").value = conversationId;
+//document.getElementById("telefono").value = ani;
 } );
 	
 	
