--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -154,8 +154,8 @@ client.loginImplicitGrant(
 }).catch(e => console.log(e));				
 //retrieveANI();
 //Kameliya
-const ani = await getAniByConversationId(conversationId);
-console.log('ANI from participant attributes:', ani);
+//const ani = await getAniByConversationId(conversationId);
+//console.log('ANI from participant attributes:', ani);
 document.getElementById("telefono").value = conversationId;
 //document.getElementById("telefono").value = ani;
 } );
