--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -154,10 +154,18 @@ client.loginImplicitGrant(
 }).catch(e => console.log(e));				
 //retrieveANI();
 //Kameliya
-//const ani = await getAniByConversationId(conversationId);
-//console.log('ANI from participant attributes:', ani);
-document.getElementById("telefono").value = conversationId;
-//document.getElementById("telefono").value = ani;
+const caller = conversation.participants.find(p =>
+p.purpose === 'customer' || p.purpose === 'caller');
+
+
+    if (caller &&; caller.attributes) {
+        const ani = caller.attributes['Call.Ani'];
+        console.log('Caller ANI:', ani);
+    }
+})
+.catch((err) =>; console.error(err));
+//document.getElementById("telefono").value = conversationId;
+document.getElementById("telefono").value = ani;
 } );
 	
 	
