--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -163,7 +163,7 @@ p.purpose === 'customer' || p.purpose === 'caller');
         console.log('Caller ANI:', ani);
     }
 })
-.catch((err) =>; console.error(err));
+.catch((err) => console.error(err));
 //document.getElementById("telefono").value = conversationId;
 document.getElementById("telefono").value = ani;
 } );
