--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -177,7 +177,7 @@ const conversation = await conversationsApi.getConversation(conversationId);
 }
 
 //document.getElementById("telefono").value = conversationId;
-document.getElementById("telefono").value = ani;
+document.getElementById("telefono").value = customerParticipant.attributes.ani;
 } );
 	
 	
