--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -178,8 +178,7 @@ const conversation = await conversationsApi.getConversation(conversationId);
 }
 
 //document.getElementById("telefono").value = conversationId;
-	    const ani = customerParticipant.attributes.ani; 
-document.getElementById("telefono").value = ani;
+//document.getElementById("telefono").value = ani;
 } );
 	
 	
