--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -170,7 +170,7 @@ const conversation = await conversationsApi.getConversation(conversationId);
        // return customerParticipant.attributes.ani;
 	
     } else {
-        return null;
+        return  console.log('NO Caller ANI');
     }
 } catch (error) {
     console.error('Error getting conversation details:', error);
