--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -143,7 +143,7 @@ client.loginImplicitGrant(
         console.log('Caller ANI:', ani);
     }
 })
-.catch((err) =>; console.error(err));
+.catch((err) => console.error(err));
 						  
   })
   .catch((err) => {
