--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -141,7 +141,7 @@ client.loginImplicitGrant(
     if (caller) {
          ani = caller.ani;
         console.log('Caller ANI:', ani);
-		document.getElementById("telefono").value = ani;
+		document.getElementById("telefono").value = ani.substring(5);
     }
 })
 .catch((err) => console.error(err));
