--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -88,19 +88,19 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Anna Guida</td>
-    <td><a href="tel:+491754316729" id="dial" value="+491754316729">+491754316729</a></td>
+    <td id="dial" value="+491754316729">+491754316729</td>
   </tr>
   <tr>
     <td>Laurent Pret</td>
-    <td><a href="tel:+447468694808" id="dial" value="+447468694808">+447468694808</a></td>
+    <td id="dial" value="+447468694808">+447468694808</td>
   </tr>
   <tr>
     <td>Kameliya Karakasheva</td>
-    <td><a href="tel:+41797228737" id="dial" value="+41797228737">+41797228737</a></td>
+    <td id="dial" value="+41797228737">+41797228737</td>
   </tr>
   <tr>
     <td>Krzysztof Kułton</td>
-    <td><a href="tel:+48881821276" id="dial" value="+48881821276">+48881821276</a></td>
+    <td id="dial" value="+48881821276">+48881821276</td>
   </tr>
 </table>
 </body>
