--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -100,7 +100,7 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Krzysztof Kułton</td>
-    <td id="dial" value="+48881821276">+48881821276</td>
+    <td><button type="button" id="dial" value="+48881821276">+48881821276</button></td>
   </tr>
 </table>
 </body>
