--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -147,7 +147,7 @@ return usersApi.getUsersMe();
 			$('#dial').click(() => {
 				// Create request body
 				let body = {
-				ani = "";
+				ani = '';
 				document.getElementById("dial").value = ani;
 					'phoneNumber':$('ani').val()
 				};
