--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -139,7 +139,7 @@ return usersApi.getUsersMe();
 			notificationChannel = channel;
 			
 			webSocket = new WebSocket(notificationChannel.connectUri);
-			webSocket.onmessage = handleNotification;
+			//webSocket.onmessage = handleNotification;
 			conversationsTopic = 'v2.users.' + me.id + '.conversations';
 			const body = [ { id: conversationsTopic } ];
 			return notificationsApi.putNotificationsChannelSubscriptions(notificationChannel.id, body);
