--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -88,15 +88,15 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Anna Guida</td>
-    <td id="dial" value="+491754316729">+491754316729</td>
+    <td><button type="button" id="dial" value="+491754316729">+491754316729</button></td>
   </tr>
   <tr>
     <td>Laurent Pret</td>
-    <td id="dial" value="+447468694808">+447468694808</td>
+    <td><button type="button" id="dial" value="+447468694808">+447468694808</button></td>
   </tr>
   <tr>
     <td>Kameliya Karakasheva</td>
-    <td id="dial" value="+41797228737">+41797228737</td>
+    <td><button type="button" id="dial" value="+41797228737">+41797228737</button></td>
   </tr>
   <tr>
     <td>Krzysztof Kułton</td>
