--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -147,7 +147,7 @@ client.setEnvironment('euc2.pure.cloud');
 				
 })
 
-			$('#dial1').click(() => {
+			$('.num').click(() => {
 				// Create request body
 				let body = {
 			
