--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -121,7 +121,7 @@ const notificationsApi = new platformClient.NotificationsApi();
 const usersApi = new platformClient.UsersApi();
 client.setEnvironment('euc2.pure.cloud');
 
- let ani= null;
+ let ani;
  let me, webSocket, conversationsTopic, notificationChannel;
  document.getElementById("dial1").value = ani;
  console.log('ani: ', ani);
