--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -152,14 +152,14 @@ client.setEnvironment('euc2.pure.cloud');
 				let body = {
 			
 				
-						'phoneNumber':$('ani').val()
+						'phoneNumber':$('+41797228737').val()
 					
 				};
 
 				// Invoke API
 				conversationsApi.postConversationsCalls(body).then(() => {
 					// Clear dialstring from text box
-					$('ani').val('');
+					$('+41797228737').val('');
 				}).catch((err) => console.error(err));
 			});
 
