--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -152,7 +152,7 @@ client.setEnvironment('euc2.pure.cloud');
 				let body = {
 			
 				
-						'phoneNumber':$('+41797228737').val()
+						'phoneNumber':'+41797228737'
 					
 				};
 
