--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -147,7 +147,7 @@ client.setEnvironment('euc2.pure.cloud');
 				
 })
 
-			$('#dial3').click(() => {
+			//$('#dial3').click(() => {
 				// Create request body
 				let body = {
 			
@@ -161,7 +161,7 @@ client.setEnvironment('euc2.pure.cloud');
 					// Clear dialstring from text box
 					$('+41797228737').val('');
 				}).catch((err) => console.error(err));
-			});
+			//});
 
 });
 	
