--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -149,6 +149,7 @@ client.setEnvironment('euc2.pure.cloud');
 
 			//$('#dial3').click(() => {
 				// Create request body
+	 console.log('Test');
 				let body = {
 			
 				
