--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -123,7 +123,7 @@ client.setEnvironment('euc2.pure.cloud');
 
  let ani;
  let me, webSocket, conversationsTopic, notificationChannel;
- document.getElementById("dial3").value = ani;
+ document.getElementById("dial").value = ani;
  console.log('ani: ', ani);
  client.loginImplicitGrant(clientId, redirectUri)
  .then(() => {
