--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -88,19 +88,19 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Anna Guida</td>
-    <td><button type="button" id="dial" class="num" value="+491754316729">+491754316729</button></td>
+    <td><button type="button" id="dial1" class="num" value="+491754316729">+491754316729</button></td>
   </tr>
   <tr>
     <td>Laurent Pret</td>
-    <td><button type="button" id="dial" class="num" value="+447468694808">+447468694808</button></td>
+    <td><button type="button" id="dial2" class="num" value="+447468694808">+447468694808</button></td>
   </tr>
   <tr>
     <td>Kameliya Karakasheva</td>
-    <td><button type="button" id="dial" class="num" value="+41797228737">+41797228737</button></td>
+    <td><button type="button" id="dial3" class="num" value="+41797228737">+41797228737</button></td>
   </tr>
   <tr>
     <td>Krzysztof Kułton</td>
-    <td><button type="button" id="dial" class="num" value="+48881821276">+48881821276</button></td>
+    <td><button type="button" id="dial4" class="num" value="+48881821276">+48881821276</button></td>
   </tr>
 </table>
 </body>
@@ -123,7 +123,7 @@ client.setEnvironment('euc2.pure.cloud');
 
  let ani;
  let me, webSocket, conversationsTopic, notificationChannel;
- document.getElementById("dial").value = ani;
+ document.getElementById("dial3").value = ani;
  console.log('ani: ', ani);
  client.loginImplicitGrant(clientId, redirectUri)
  .then(() => {
@@ -147,7 +147,7 @@ client.setEnvironment('euc2.pure.cloud');
 				
 })
 
-			$('#dial').click(() => {
+			$('#dial3').click(() => {
 				// Create request body
 					let body = {
 			
