--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -88,19 +88,19 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Anna Guida</td>
-    <td><button type="button" id="dial1" class="num" value="+491754316729">+491754316729</button></td>
+    <td><a href="tel:+491754316729">Click to Call</a></td>
   </tr>
   <tr>
     <td>Laurent Pret</td>
-    <td><button type="button" id="dial2" class="num" value="+447468694808">+447468694808</button></td>
+    <td><a href="tel:+447468694808">Click to Call</a></td>
   </tr>
   <tr>
     <td>Kameliya Karakasheva</td>
-    <td><button type="button" id="dial3" class="num" value="+41797228737">+41797228737</button></td>
+    <td><a href="tel:+41797228737">Click to Call</a></td>
   </tr>
   <tr>
     <td>Krzysztof Kułton</td>
-    <td><button type="button" id="dial4" class="num" value="+48881821276">+48881821276</button></td>
+    <td><a href="tel:+48881821276">Click to Call</a></td>
   </tr>
 </table>
 </body>
