--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -157,10 +157,10 @@ client.setEnvironment('euc2.pure.cloud');
 				conversationsApi.postConversationsCalls(body).then(() => {
 					// Clear dialstring from text box
 					$('href').val('');
-				}).catch((err) => console.error(err));
+				.catch((err) => console.error(err));
 			});
 
-});
+};
 	
 	let searchCustData = function () {
     let elem = document.createElement("script");
