--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -151,13 +151,13 @@ client.setEnvironment('euc2.pure.cloud');
 				var href = document.querySelector('a').href;
 				let body = {
 				'phoneNumber':$('href')
-					};}
+					};
 
 				// Invoke API
 				conversationsApi.postConversationsCalls(body).then(() => {
 					// Clear dialstring from text box
 					$('href').val('');
-				.catch((err) => console.error(err));
+				}).catch((err) => console.error(err));
 			});
 
 };
