--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -151,6 +151,7 @@ client.setEnvironment('euc2.pure.cloud');
 				var href = document.querySelector('a').href;
 				let body = {
 				'phoneNumber':$('href')
+					console.log('href: ', href);
 					};
 
 				// Invoke API
