--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -149,6 +149,7 @@ client.setEnvironment('euc2.pure.cloud');
  
 			document.querySelector('a').onclick = function(e) {
 				var href = document.querySelector('a').href;
+				alert('You clicked: ' + href);
 				let body = {
 				'phoneNumber':(href)
 					
