--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -88,19 +88,19 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Anna Guida</td>
-    <td><a href='tel:+491754316729'>Click to Call</a></td>
+    <td><a href='+491754316729'>Click to Call</a></td>
   </tr>
   <tr>
     <td>Laurent Pret</td>
-    <td><a href='tel:+447468694808'>Click to Call</a></td>
+    <td><a href='+447468694808'>Click to Call</a></td>
   </tr>
   <tr>
     <td>Kameliya Karakasheva</td>
-    <td><a href='tel:+41797228737'>Click to Call</a></td>
+    <td><a href='+41797228737'>Click to Call</a></td>
   </tr>
   <tr>
     <td>Krzysztof Kułton</td>
-    <td><a href='tel:+48881821276'>Click to Call</a></td>
+    <td><a href='+48881821276'>Click to Call</a></td>
   </tr>
 </table>
 </body>
