--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -92,11 +92,11 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Laurent Pret</td>
-    <td><a href='+447468694808'>Click to Call</a></td>
+    <td><a href='+447468694808' onclick='e()'>Click to Call</a></td>
   </tr>
   <tr>
     <td>Kameliya Karakasheva</td>
-    <td><a href='+41797228737'>Click to Call</a></td>
+    <td><a href='+41797228737'  onclick='e()'>Click to Call</a></td>
   </tr>
   <tr>
     <td>Krzysztof Kułton</td>
@@ -147,7 +147,8 @@ client.setEnvironment('euc2.pure.cloud');
 				
 })
  
-			document.querySelector('a').onclick = function(e) {
+			//document.querySelector('a').onclick = 
+	 			function(e) {
 				var href = document.querySelector('a').href;
 				alert('You clicked: ' + href);
 				let body = {
