--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -148,7 +148,7 @@ client.setEnvironment('euc2.pure.cloud');
 })
  
 			//document.querySelector('a').onclick = 
-	 			function(e) {
+	 			function e() {
 				var href = document.querySelector('a').href;
 				alert('You clicked: ' + href);
 				let body = {
