--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -96,7 +96,7 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Kameliya Karakasheva</td>
-    <td><a href='+41797228737' onclick='dial()'>Click to Call</a></td>
+    <td><a href='tel:+41797228737' onclick='dial()'>Click to Call</a></td>
   </tr>
   <tr>
     <td>Krzysztof Kułton</td>
@@ -150,7 +150,7 @@ client.setEnvironment('euc2.pure.cloud');
 			//document.querySelector('a').onclick = 
 	 			function dial() {
 				var href = document.querySelector('a').href;
-				alert('You clicked: ' + href);
+				alert('You clicked: ' + href.substring(5));
 				let body = {
 				'phoneNumber':(href.substring(5))
 					
