--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -88,7 +88,7 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Anna Guida</td>
-    <td><a href='+491754316729'>Click to Call</a></td>
+    <td><a id='+491754316729' onclick='dial()'>Click to Call</a></td>
   </tr>
   <tr>
     <td>Laurent Pret</td>
